syntax = 'proto3';

package route256.product;

option go_package = "route256/product/pkg/product";

service ProductService {
    rpc GetProduct(RequestGetProduct) returns (ResponseGetProduct);
    rpc ListSkus(RequestListSkus) returns (ResponseListSkus);
}

message RequestGetProduct {
    string token = 1;
    uint32 sku = 2;
}

message ResponseGetProduct {
    string name = 1;
    uint32 price = 2;
}

message RequestListSkus {
    string token = 1;
    uint32 startAfterSku = 2;
    uint32 count = 3;
}

message ResponseListSkus {
    repeated uint32 skus = 1;
}
